# OpenGL-Environment

./: .gitignore  CMakeLists.txt  README.md  h
include/: glmhelper.h  timer.h
include/glad/: glad.h
resources/buildscripts/linux/: #debugMingw.sh#  .#debugMingw.sh  debug.sh  debugMingw.sh  release.sh
resources/buildscripts/windows/: debug.bat  release.bat
resources/shaders/: 3D-lighting-anim.vert  3D-lighting.vert  b.frag  b.vert  blinnphong.frag  flat.frag  flat.vert
src/: CMakeLists.txt  app.cpp  app.h  camera.h  framebuffer.cpp  framebuffer.h  main.cpp  ogl_helper.cpp  ogl_helper.h  render.cpp  render.h  shader.cpp
src/opengl-render/: config.h  render.cpp  render.h  resources.h  shader.cpp  shader.h  vertex_data.cpp  vertex_data.h
src/opengl-render/resources/: #model_loader.h#  .#model_loader.h  font_loader.cpp  model_loader.cpp  model_loader.h  resources.h  texture_loader.cpp  texture_loader.h  vertex_data.cpp  vertex_data.h
src/resources/: font_loader.cpp  font_loader.h  model_loader.cpp  model_loader.h  model_render.cpp  model_render.h  resource_pool.cpp  resource_pool.h  texture_loader.cpp  texture_loader.h  vertex_data.cpp  vertex_data.h
